--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@ layout: default
 			<a class="button button--white">Learn more</a>
 
 		</div>
-		<div class="tiles__tile"><a href="#"><h2>Ready to<br>grow?</h2></a></div>
-		<div class="tiles__tile"><a href="#"><h2>Ready to<br>build?</h2></a></div>
-		<div class="tiles__tile"><a href="#"><h2>RME<br>geomatics</h2></a></div>
+		<div class="tiles__tile"><a href="#" class=""><h2>Ready to<br>grow?</h2></a></div>
+		<div class="tiles__tile"><a href="#" class=""><h2>Ready to<br>build?</h2></a></div>
+		<div class="tiles__tile"><a href="#" class=""><h2>RME<br>geomatics</h2></a></div>
 	</div>
+
+	
+		
+	{% include eq-finder.html %}
+
+	
 
 </div>
