Home, Ag, Construction
Completed the 3 landing pages

--- a/index.html
+++ b/index.html
@@ -16,15 +16,27 @@ layout: default
 		</div>
 		
 		<div class="tiles__tile tiles__tile--ag">
-			<a href="#" class="tile-link"><h2>Ready to<br>grow?</h2></a>
+			<a href="/rme-ag.html" class="tile-link"><h2>Ready to<br>grow?</h2></a>
 		</div>
 		
 		<div class="tiles__tile tiles__tile--const">
-			<a href="#" class="tile-link"><h2>Ready to<br>build?</h2></a>
+			<a href="/rme-const.html" class="tile-link"><h2>Ready to<br>build?</h2></a>
 		</div>
 		
-		<div class="tiles__tile tiles__tile--geo">
-			<a href="#" class="tile-link"><h2>RME<br>geomatics</h2></a>
+		<div class="tiles__tile tiles__tile--parts">
+			<a href="#" class="tile-link"><h2>Parts &amp;<br>services</h2></a>
+		</div>
+
+		<div class="tiles__tile tiles__tile--logo">
+			<a href="http://rmedealzone.ca/" target="_blank" class="tile-link"><img src="images/logo-dealzone.png" alt="RME dealzone"></a>
+		</div>
+		
+		<div class="tiles__tile tiles__tile--logo">
+			<a href="#" target="_blank" class="tile-link"><img src="images/logo-eqfinder.png" alt="RME Equipment Finder"></a>
+		</div>
+		
+		<div class="tiles__tile tiles__tile--logo">
+			<a href="http://www.rmegeomatics.com/" target="_blank" class="tile-link"><img src="images/logo-geo.png" alt="RME Geomatics"></a>
 		</div>
 
 	</section>
