--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ layout: default
 		</div>
 		
 		<div class="tiles__tile tiles__tile--ag">
-			<a href="/rme-ag.html" class="tile-link"><h2>Ready to<br>grow?</h2></a>
+			<a href="rme-ag.html" class="tile-link"><h2>Ready to<br>grow?</h2></a>
 		</div>
 		
 		<div class="tiles__tile tiles__tile--const">
-			<a href="/rme-const.html" class="tile-link"><h2>Ready to<br>build?</h2></a>
+			<a href="rme-const.html" class="tile-link"><h2>Ready to<br>build?</h2></a>
 		</div>
 		
 		<div class="tiles__tile tiles__tile--parts">
