Adding Equipment Finder
Starting to add Eq Finder, plus added in jQuery

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 		</div>
 		
 		<div class="tiles__tile tiles__tile--logo">
-			<a href="#" target="_blank" class="tile-link"><img src="images/logo-eqfinder.png" alt="RME Equipment Finder"></a>
+			<a href="ef-home.html" target="_blank" class="tile-link"><img src="images/logo-eqfinder.png" alt="RME Equipment Finder"></a>
 		</div>
 		
 		<div class="tiles__tile tiles__tile--logo">
