--- a/ef-home.html
+++ b/ef-home.html
@@ -12,22 +12,23 @@ layout: eq-finder
 				<p>Welcome to RME Equipment Finder. Let us match you up with the perfect piece of equipment you have been looking for.</p>
 				<p><strong><em>Let's get started!</em></strong></p>
 				<div class="deal-zone-promo">
-					For bargain discounts, check out:<br>
+					<p>For bargain discounts, check out:</p>
 					<a href="http://rmedealzone.ca/" target="_blank"><img src="images/logo-dealzone.png" alt="RME dealzone"></a>
 				</div>
+				<p>Rocky Mountain Equipment main site:<br><a href="http://www.rockymtn.com">www.rockymtn.com</a></p>
 			</div>
 
 			<div class="search-area">
 				<div class="tabs">
 					
 					<div class="tab-links">
-						<a class="tab-1 tab-ag">Agriculture</a><a class="tab-2 tab-ce">Construction</a>
+						<a class="tab tab--ag active">Agriculture</a><a class="tab tab--ce">Construction</a>
 					</div>
-					<div class="tab-content-1">
+					<div class="tab-content">
 						<!-- Include eq finder search fields -->
 						{% include eqf-form.html %}
 					</div>
-					<div class="tab-content-2">
+					<div class="tab-content">
 						<!-- Include eq finder search fields -->
 						{% include eqf-form.html %}
 					</div>
