--- a/ef-home.html
+++ b/ef-home.html
@@ -24,11 +24,11 @@ layout: eq-finder
 					<div class="tab-links">
 						<a class="tab tab--ag active">Agriculture</a><a class="tab tab--ce">Construction</a>
 					</div>
-					<div class="tab-content">
+					<div class="tab-content tab-content--ag">
 						<!-- Include eq finder search fields -->
 						{% include eqf-form.html %}
 					</div>
-					<div class="tab-content">
+					<div class="tab-content tab-content--ce">
 						<!-- Include eq finder search fields -->
 						{% include eqf-form.html %}
 					</div>
