--- a/ef-home.html
+++ b/ef-home.html
@@ -40,6 +40,46 @@ layout: eq-finder
 		</div>
 
 	</div>
-	
+
+	<section class="feat-eq">
+
+		<div class="wrapper">
+			<h2>Featured Equipment</h2>
+
+			<div class="feat-eq-ag">
+				
+				<div class="title-bar">
+					<h3>Agriculture</h3>
+					<a href="#" class="button button--text">Browse all agriculture equipment <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+				</div>
+
+				<div class="products">
+					{% include product-cards.html %}
+					{% include product-cards.html %}
+					{% include product-cards.html %}
+					{% include product-cards.html %}
+				</div>
+
+			</div>
+
+			<div class="feat-eq-ce">
+
+				<div class="title-bar">
+					<h3>Construction</h3>
+					<a href="#" class="button button--text button--orange">Browse all agriculture equipment <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+				</div>
+
+				<div class="products">
+					{% include product-cards.html %}
+					{% include product-cards.html %}
+					{% include product-cards.html %}
+					{% include product-cards.html %}
+				</div>
+
+			</div>
+
+		</div>
+
+	</section>
 
 </div>
