--- a/ef-search.html
+++ b/ef-search.html
@@ -33,7 +33,11 @@ layout: eq-finder
 					</select>
 				</div>
 			</div>
-			<div class="bottom"></div>
+			<div class="bottom">
+				<div class="results">91 results</div>
+				<div class="pagination">[pagination goes here]</div>
+				<div class="new-search"><a href="" class="button button--text"><i class="fa fa-search"></i>&nbsp;Start new search</a></div>
+			</div>
 
 		</div>
 
